# Prism

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  cliff.toml  compose.yaml  main.py  mkdocs.yml  prism.iss  pyproject.toml
.claude/skills/vagrant-run/: SKILL.md
.claude/skills/vagrant-up/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-release.yml  changelog.yml  ci.yml  pages.yml  test-linux.yml  test-windows.yml
.hermes/plans/: cast-v2-typer-integration.md  docs-review.md
docs/: changelog.md  index.md  releases.md  testing.md
docs/commands/: cast.md  chatbot.md  compile.md  config.md  documents.md  gui.md  index.md  indexing.md  info.md  monitor.md  serve.md  setup.md  sql.md  terminal.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/mcp/: client-setup.md  debugging.md  index.md  tools.md
scripts/: changelog.sh  lint.sh  test-all.sh  test-integration.sh  test-unit.sh  visual_test_monitor.py
src/prism/: __init__.py  __main__.py  config.py  output.py  settings.py
src/prism/cast/: __init__.py  (+1 more)
tests/: conftest.py
tests/gui/: conftest.py  emy_vision.py  test_e2e_user_scenarios.py  test_gui_interactions.py  test_visual_regression.py
tests/integration/: conftest.py  test_background.py  test_compile.py  test_debugger.py  test_debugger_extra.py  test_document_slicing.py  test_documents.py  test_e2e.py  test_index.py  test_server_info.py  test_sql.py  test_terminal.py  test_terminal_native.py  test_testing.py
tests/mcp/: test_mcp_protocol.py
tests/unit/: test_cast_integration.py  test_chatbot_agent.py  test_chatbot_skills.py  test_cli_cast.py  test_cli_chatbot.py  test_cli_config.py  test_cli_edge_cases.py  test_cli_interactive_ws.py  test_cli_monitor.py  test_cli_setup.py  test_completion.py  test_debugger.py  test_gui_sql.py  test_gui_tabs.py  test_gui_widgets.py  test_index.py  test_log.py  test_mcp_files.py  test_mcp_monitor.py  test_mcp_shell.py  test_monitor_averages.py  test_monitor_collector.py  test_monitor_dashboard.py  test_monitor_event_loop.py  test_monitor_parser.py  test_monitor_scorer.py  test_output.py  test_pyinstaller_compat.py  test_settings.py  test_tool_errors.py  test_tools.py  test_workspace.py
tests/workspace/: Test.MCPAddress.cls  Test.MCPBgHelper.cls  Test.MCPEmployee.cls  Test.MCPFailingTest.cls  Test.MCPHeader.inc  Test.MCPPerson.cls  Test.MCPRoutine.mac  Test.MCPSampleTest.cls  Test.MCPUtils.cls
vagrant/: Vagrantfile  build-in-vm.ps1  build-windows.sh  prism.iss  run-integration-tests.sh  screenshot.sh
vagrant/scripts/: README.md  _common.ps1  install.ps1  run-all.ps1  setup-test-env.ps1  teardown-test-env.ps1  uninstall.ps1
(+103 files in other folders)
