[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-mcp"
version = "0.1.3"
description = "Prism lets AI see through IRIS — MCP server for SQL, documents, compilation, debugging, testing, and ObjectScript execution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.28.1",
    "intersystems-irispython>=5.0",
    "platformdirs>=4.0",
    "python-dotenv>=1.2.1",
    "websockets>=13.0",
]

[project.scripts]
prism = "prism.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
